<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.PopularFragment">

    <LinearLayout
        android:id="@+id/popular_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="18dp"
        android:paddingTop="18dp"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="160sp"
            android:text="@string/popular_title"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filmListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55sp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        android:paddingTop="80sp"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_toolbar"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/list_item" />

    <LinearLayout
        android:id="@+id/updateWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_toolbar">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cloud_off_description"
            android:src="@drawable/baseline_cloud_off_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15sp"
            android:maxWidth="280sp"
            android:text="@string/errorMessage"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="14sp" />

        <Button
            android:id="@+id/updateBtn"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/my_button"
            android:paddingHorizontal="24sp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>